# docs/swagger.yaml
@@ -52,22 +52,7 @@ definitions:
       signature:
         type: string
     type: object
-  p4.ClientError:
-    properties:
-      code:
-        example: N01
-        type: string
-      id:
-        example: e97970bf-2a88-4bc8-90e6-2f597a80b93d
-        type: string
-      message:
-        example: unable to find foo when loading bar
-        type: string
-      title:
-        example: not found
-        type: string
-    type: object
-  p4.MerchantData:
+  p4.Merchant:
     properties:
       address:
         description: Address is the merchants store / head office address.
@@ -87,7 +72,7 @@ definitions:
           arbitrary data back to the wallet.
         type: object
       name:
-        description: MerchantName is a human readable string identifying the merchant.
+        description: Name is a human readable string identifying the merchant.
         example: merchant 1
         type: string
     type: object
@@ -108,28 +93,14 @@ definitions:
         example: 76a91455b61be43392125d127f1780fb038437cd67ef9c88ac
         type: string
     type: object
-  p4.PaymentACK:
-    properties:
-      error:
-        description: |-
-          A number indicating why the transaction was not accepted. 0 or undefined indicates no error.
-          A 1 or any other positive integer indicates an error. The errors are left undefined for now;
-          it is recommended only to use “1” and to fill the memo with a textual explanation about why
-          the transaction was not accepted until further numbers are defined and standardised.
-        type: integer
-      memo:
-        type: string
-      payment:
-        $ref: '#/definitions/p4.PaymentCreate'
-    type: object
-  p4.PaymentCreate:
+  p4.Payment:
     properties:
       memo:
         description: Memo is a plain-text note from the customer to the payment host.
         example: for invoice 123456
         type: string
       merchantData:
-        $ref: '#/definitions/p4.MerchantData'
+        $ref: '#/definitions/p4.Merchant'
         description: |-
           MerchantData is copied from PaymentDetails.merchantData.
           Payment hosts may use invoice numbers or any other data they require to match Payments to PaymentRequests.
@@ -162,6 +133,25 @@ definitions:
           SPVEnvelope which contains the details of previous transaction and Merkle proof of each input UTXO.
           Should be available if SPVRequired is set to true in the paymentRequest.
           See https://tsc.bitcoinassociation.net/standards/spv-envelope/
+    type: object
+  p4.PaymentACK:
+    properties:
+      error:
+        description: |-
+          A number indicating why the transaction was not accepted. 0 or undefined indicates no error.
+          A 1 or any other positive integer indicates an error. The errors are left undefined for now;
+          it is recommended only to use “1” and to fill the memo with a textual explanation about why
+          the transaction was not accepted until further numbers are defined and standardised.
+        type: integer
+      memo:
+        type: string
+      payment:
+        $ref: '#/definitions/p4.Payment'
+    type: object
+  p4.PaymentCreateArgs:
+    properties:
+      paymentID:
+        type: string
     type: object
   p4.PaymentDestinations:
     properties:
@@ -201,7 +191,7 @@ definitions:
         example: invoice number 123456
         type: string
       merchantData:
-        $ref: '#/definitions/p4.MerchantData'
+        $ref: '#/definitions/p4.Merchant'
         description: |-
           MerchantData contains arbitrary data that may be used by the payment host to identify the PaymentRequest.
           May be omitted if the payment host does not need to associate Payments with PaymentRequest
@@ -236,6 +226,21 @@ definitions:
   p4.ProofCallback:
     properties:
       token:
+        type: string
+    type: object
+  server.ClientError:
+    properties:
+      code:
+        example: N01
+        type: string
+      id:
+        example: e97970bf-2a88-4bc8-90e6-2f597a80b93d
+        type: string
+      message:
+        example: unable to find foo when loading bar
+        type: string
+      title:
+        example: not found
         type: string
     type: object
   spv.Envelope:
@@ -290,11 +295,11 @@ paths:
           description: returned if the user input is invalid, usually an issue with
             the paymentID
           schema:
-            $ref: '#/definitions/p4.ClientError'
+            $ref: '#/definitions/server.ClientError'
         "404":
           description: returned if the paymentID has not been found
           schema:
-            $ref: '#/definitions/p4.ClientError'
+            $ref: '#/definitions/server.ClientError'
         "500":
           description: returned if there is an unexpected internal error
           schema:
@@ -319,7 +324,7 @@ paths:
         name: body
         required: true
         schema:
-          $ref: '#/definitions/p4.PaymentCreate'
+          $ref: '#/definitions/p4.PaymentCreateArgs'
       produces:
       - application/json
       responses:
@@ -332,11 +337,11 @@ paths:
           description: returned if the user input is invalid, usually an issue with
             the paymentID
           schema:
-            $ref: '#/definitions/p4.ClientError'
+            $ref: '#/definitions/server.ClientError'
         "404":
           description: returned if the paymentID has not been found
           schema:
-            $ref: '#/definitions/p4.ClientError'
+            $ref: '#/definitions/server.ClientError'
         "500":
           description: returned if there is an unexpected internal error
           schema:
@@ -345,7 +350,7 @@ paths:
         is validated before being broadcast to the network.
       tags:
       - Payment
-  /v1/proofs/{txid}:
+  /api/v1/proofs/{txid}:
     post:
       consumes:
       - application/json
